tests/script_errors/tailing_heredoc/error.txt
Error: 
    1 | """test"""
      | ^^^ It looks like you have characters tailing the here doc opening, it needs to be followed by a newline